# MeshHatController

./: .gitignore  .justfile  Cargo.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yaml  pr.yaml
meshcore-grpc-gateway/: Cargo.toml
meshcore-grpc-gateway/cli/: Cargo.toml
meshcore-grpc-gateway/cli/src/: main.rs
meshcore-grpc-gateway/env/: Cargo.toml
meshcore-grpc-gateway/env/src/: lib.rs
meshcore-grpc-gateway/proto/: meshcore.proto
meshcore-grpc-gateway/server/: Cargo.toml
meshcore-grpc-gateway/server/src/: main.rs  server.rs
meshcore-grpc-gateway/server/src/server/: contact.rs  info.rs  message.rs  reset.rs  util.rs
meshhat-controller/: Cargo.toml
meshhat-controller/cli/: Cargo.toml  build.rs
meshhat-controller/cli/src/: main.rs
meshhat-controller/env/: Cargo.toml
meshhat-controller/env/src/: lib.rs
meshhat-controller/proto/: meshcore.proto
meshhat-controller/server/: Cargo.toml  build.rs
meshhat-controller/server/src/: app_env.rs  main.rs  server.rs
meshhat-controller/server/src/server/: contact.rs  get_name.rs  healthcheck.rs  message.rs
proto/: meshcore.proto
snap/: snapcraft.yaml
src/: app_env.rs  main.rs  server.rs
src/server/: contact.rs  healthcheck.rs  message.rs  util.rs
