[package]
name = "cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_derive = "4.6.1"
prost = "0.14.3"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"
env = { path = "../env" }

[build-dependencies]
tonic-prost-build = "0.14.6"

[lints]
workspace = true
