[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
meshcore-rs        = "0.1.10"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_derive = "4.6.1"
prost = "0.14.3"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-build = "0.12"
tonic-prost = "0.14.6"
tracing            = "0.1"
hex = "0.4.3"
signal = "0.7.0"
serde_json = "1.0.150"
env = { path = "../env" }
tonic-health = "0.14.6"
prost-types = "0.14.4"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"

[build-dependencies]
tonic-prost-build = "0.14.6"

[lints]
workspace = true
