[package]
name = "cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
tokio              = { version = "1", features = ["fs", "rt"] }
anyhow = "1.0.102"
clap = { version = "4.0.0", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
tonic              = { version = "0.12", features = ["transport"] }
prost              = "0.12"
tower = { version = "0.5.3", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.12"
