[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
meshcore-rs        = "0.1"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_derive = "4.6.1"
hyper-util = { version = "0.1.20", features = ["tokio"] }
prost = "0.14.3"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-build = "0.12"
tonic-prost = "0.14.6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
hex = "0.4.3"
tokio-stream = { version = "0.1.18", features = ["net"] }
signal = "0.7.0"
libgpiod = { version = "1.0.0", features = ["v2_1"] }

[build-dependencies]
tonic-prost-build = "0.14.6"
